# arandoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ad/: core.h
include/ad/core/: arandoc.h  block.h  container.h  crossref.h  document.h  equation.h  figure.h  header.h  inline.h  list.h  macros.h  paragraph.h  range.h  text.h  unit.h  version.h
include/arandoc/: arandoc.h
src/core/: block.c  container.c  document.c  header.c  unit.c
src/editor_gtk/: main.c
test/core/: arandoc.c
